SERVER-71046 Record lookup+unwind pipeline stats when input is exhausted